exports[`ClogiiNavigator render 1`] = `
<FixBugScrollViewNavigator
  initialRoute={
    Object {
      "id": 3,
      "page": "main-tab",
    }
  }
  renderScene={[Function]} />
`;

exports[`ClogiiNavigator renderScene book 1`] = `
<View>
  <Apollo(Book)
    goToComment={[Function]}
    goToPlayer={[Function]}
    id={3}
    onBackPress={[Function]} />
</View>
`;

exports[`ClogiiNavigator renderScene main-tab 1`] = `
<View>
  <Connect(Connect(ClogiiTabView))
    goToBook={[Function]}
    goToPlayer={[Function]}
    redirectTo={[Function]} />
</View>
`;

exports[`ClogiiNavigator renderScene player 1`] = `
<View>
  <Apollo(Apollo(Apollo(Player)))
    goToComment={[Function]}
    id={1}
    onBackPress={[Function]} />
</View>
`;
